--- a/src/main/resources/templates/events/addEvent.html
+++ b/src/main/resources/templates/events/addEvent.html
@@ -19,6 +19,8 @@
 
   <link rel="stylesheet" href="../../static/resources/css/bootstrap-select.min.css"
         th:href="@{/resources/css/bootstrap-select.min.css}"/>
+
+  <link rel="shortcut icon" th:href="@{/resources/res/favicon.ico}"/>
 </head>
 <body>
 
