--- a/src/main/resources/templates/newsletters.html
+++ b/src/main/resources/templates/newsletters.html
@@ -26,6 +26,8 @@
         th:href="@{/resources/css/bootstrap-select.min.css}"/>
   <script src="../static/resources/js/bootstrap-select.min.js"
           th:src="@{/resources/js/bootstrap-select.min.js}"></script>
+
+  <link rel="shortcut icon" th:href="@{/resources/res/favicon.ico}"/>
 </head>
 <body>
 
