--- a/src/main/resources/templates/events/eventDetails.html
+++ b/src/main/resources/templates/events/eventDetails.html
@@ -14,6 +14,8 @@
 
   <link rel="stylesheet" type="text/css" href="../../static/resources/css/bootstrap-select.min.css"
         th:href="@{/resources/css/bootstrap-select.min.css}"/>
+        
+  <link rel="shortcut icon" th:href="@{/resources/res/favicon.ico}"/>
 </head>
 <body>
 
