--- a/src/main/resources/templates/events/pastEvents.html
+++ b/src/main/resources/templates/events/pastEvents.html
@@ -13,6 +13,8 @@
         th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
   <link rel="stylesheet" type="text/css" href="../../static/resources/css/style.css"
         th:href="@{/resources/css/style.css}"/>
+        
+  <link rel="shortcut icon" th:href="@{/resources/res/favicon.ico}"/>
 </head>
 <body>
 
