--- a/src/main/resources/templates/persons/filterPersons.html
+++ b/src/main/resources/templates/persons/filterPersons.html
@@ -18,6 +18,8 @@
         th:href="@{/resources/css/filterPersons.css}"/>
   <link rel="stylesheet" href="../../static/resources/css/bootstrap-select.min.css"
         th:href="@{/resources/css/bootstrap-select.min.css}"/>
+
+  <link rel="shortcut icon" th:href="@{/resources/res/favicon.ico}"/>
 </head>
 <body>
 
