--- a/src/main/resources/templates/sqlConsole.html
+++ b/src/main/resources/templates/sqlConsole.html
@@ -15,6 +15,8 @@
 
   <link rel="stylesheet" type="text/css" href="../static/resources/css/style.css"
         th:href="@{/resources/css/style.css}"/>
+
+  <link rel="shortcut icon" th:href="@{/resources/res/favicon.ico}"/>
 </head>
 <body>
 
