#47 - Fix ParticipationScheduler being invoked despite no real accommodation info

--- a/src/main/resources/templates/events/participants.html
+++ b/src/main/resources/templates/events/participants.html
@@ -730,7 +730,7 @@
                           th:attrappend="data-first-night=${#time.formatNightAsHtml(event.startTime, participationDetails.participationTime.firstNight)}, data-last-night=${#time.formatNightAsHtml(event.startTime, participationDetails.participationTime.lastNight)}">
                         28.07. - 04.08.18
                       </td>
-                      <td class="remarks" th:text="${participationDetails.remarks}">
+                      <td class="remarks action-cursor" th:text="${participationDetails.remarks}">
                         Lorem Ipsum et dolor sit amet
                       </td>
                       <td>
