Refine display of overview menus

--- a/src/main/resources/templates/events/overview.html
+++ b/src/main/resources/templates/events/overview.html
@@ -57,7 +57,7 @@
                   <span class="glyphicon glyphicon-plus"></span>
                   Hinzufügen
                 </a>
-                <a href="filterEvents.html" class="btn btn-default" disabled="disabled"
+                <a href="filterEvents.html" class="btn btn-default"
                    data-toggle="tooltip" data-placement="bottom"
                    data-title="Funktioniert bald wieder.. Versprochen!"
                    th:href="@{/events/filter}">
