--- a/src/main/resources/templates/events/pastEvents.html
+++ b/src/main/resources/templates/events/pastEvents.html
@@ -13,7 +13,7 @@
         th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
   <link rel="stylesheet" type="text/css" href="../../static/resources/css/style.css"
         th:href="@{/resources/css/style.css}"/>
-        
+
   <link rel="shortcut icon" th:href="@{/resources/res/favicon.ico}"/>
 </head>
 <body>
@@ -34,7 +34,7 @@
       <!-- menu -->
       <div class="action-bar col-md-8">
         <div class="row">
-          <form id="event-search" class="col-md-9" method="get" th:action="@{/events/search}">
+          <form id="event-search" class="col-md-8" method="get" th:action="@{/events/search}">
             <label for="event-search" class="sr-only">Suchen (Name, Datum, Ort)</label>
             <div class="input-group">
               <input type="search" name="query" class="form-control" id="search"
@@ -45,7 +45,7 @@
             </div>
           </form>
           <button type="submit" form="event-search" class="sr-only">Suche durchführen</button>
-          <div class="col-md-3">
+          <div class="col-md-4">
             <div class="btn-group">
               <a href="addEvent.html" class="btn btn-default" th:href="@{/events/add}">
                 <span class="glyphicon glyphicon-plus"></span>
@@ -78,8 +78,12 @@
                   data-title="laufende Veranstaltung" data-container="body"
                   th:if="${event.ongoing}"></span>
           </td>
-          <td class="col-md-3 strong" th:inline="text">
-            [[${event.name}]]
+          <td class="col-md-3 strong">
+            <a th:href="@{/events/{id}(id=${event.id})}">
+              <strong th:text="${event.name}">
+                Bergwiesencamp
+              </strong>
+            </a>
           </td>
           <td class="col-md-2"
               th:text="${#time.formatTimeSpan(event.getStartTime(), event.getEndTime())}">
