--- a/src/main/resources/templates/accounts.html
+++ b/src/main/resources/templates/accounts.html
@@ -397,11 +397,15 @@
       </tbody>
     </table>
 
-    <div class="pull-right">
-      <button type="button" class="btn btn-default" data-toggle="modal"
-              data-target="#create-account">
-        <span class="glyphicon glyphicon-plus"></span> Erstellen
-      </button>
+    <div class="clearfix">
+
+      <div class="pull-right">
+        <button type="button" class="btn btn-default" data-toggle="modal"
+                data-target="#create-account">
+          <span class="glyphicon glyphicon-plus"></span> Erstellen
+        </button>
+      </div>
+
     </div>
 
   </section>
