--- a/src/main/resources/templates/events/participants.html
+++ b/src/main/resources/templates/events/participants.html
@@ -269,6 +269,19 @@
                   <span class="glyphicon glyphicon-th-large"></span>
                   Übersicht
                 </a>
+                <button type="button" class="btn btn-default dropdown-toggle"
+                        data-toggle="dropdown">
+                  <span class="caret"></span>
+                  <span class="sr-only">Toggle Dropdown</span>
+                </button>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a href="customizeParticipantsTable.html"
+                       th:href="@{/events/{id}/participants/table(id=${event.id}, columnSelection=true)}">
+                      Tabelle Anpassen
+                    </a>
+                  </li>
+                </ul>
                 <a href="#" type="button" class="btn btn-default"
                    th:href="@{/events/{id}/participants(id=${event.id}, view='detailed')}">
                   <span class="glyphicon glyphicon-list"></span>
@@ -691,10 +704,12 @@
                         </small>
 
                       </td>
-                      <td class="participant-info-content action-cursor" th:text="${participant.participantProfile.hasDateOfBirth()} ? ${participant.participantProfile.calculateAge()} : ''">
+                      <td class="participant-info-content action-cursor"
+                          th:text="${participant.participantProfile.hasDateOfBirth()} ? ${participant.participantProfile.calculateAge()} : ''">
                         22.11.1999
                       </td>
-                      <td class="participant-info-content action-cursor" th:unless="${participantsList.hasAccommodationInfo()}"
+                      <td class="participant-info-content action-cursor"
+                          th:unless="${participantsList.hasAccommodationInfo()}"
                           th:text="${participant.address.city} ?: 'unbekannt'">
                         Entenhausen
                       </td>
@@ -730,7 +745,8 @@
                           th:attrappend="data-first-night=${#time.formatNightAsHtml(event.startTime, participationDetails.participationTime.firstNight)}, data-last-night=${#time.formatNightAsHtml(event.startTime, participationDetails.participationTime.lastNight)}">
                         28.07. - 04.08.18
                       </td>
-                      <td class="participant-info-content remarks action-cursor" th:text="${participationDetails.remarks}">
+                      <td class="participant-info-content remarks action-cursor"
+                          th:text="${participationDetails.remarks}">
                         Lorem Ipsum et dolor sit amet
                       </td>
                       <td>
