Enable storing participants table templates

--- a/src/main/resources/templates/events/eventDetails.html
+++ b/src/main/resources/templates/events/eventDetails.html
@@ -278,7 +278,7 @@
 </script>
 
 <script th:if="${tab == 'participantsTable' and not showTable}">
-  $(document).ready(() => $('#column-selection-dialog').modal('show'));
+  $(document).ready(() => $('#initial-column-selection-dialog').modal('show'));
 </script>
 
 </body>
