--- a/src/main/resources/templates/persons/personDetails.html
+++ b/src/main/resources/templates/persons/personDetails.html
@@ -1,224 +1,271 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
-<head>
-  <meta charset="utf-8"/>
-  <meta content="width=device-width,initial-scale=1" name="viewport"/>
-  <meta th:name="_csrf" th:value="${_csrf.token}"/>
-  <title th:text="${person.name} + ' | Adebar'">Jane Doe | Adebar</title>
-  <link rel="stylesheet" type="text/css" href="../../static/resources/css/bootstrap.min.css"
-        th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
-  <link rel="stylesheet" type="text/css" href="../../static/resources/css/vis.min.css"
-        th:href="@{/resources/css/vis.min.css}"/>
 
-  <link rel="stylesheet" type="text/css" href="../../static/resources/css/style.css"
-        th:href="@{/resources/css/style.css}"/>
-  <link rel="stylesheet" type="text/css" href="../../static/resources/css/personDetails.css"
-        th:href="@{/resources/css/personDetails.css}"/>
-  <link rel="stylesheet" type="text/css" href="../../static/resources/css/timeline.css"
-        th:href="@{/resources/css/timeline.css}"/>
+  <head>
+    <meta charset="utf-8" />
+    <meta content="width=device-width,initial-scale=1" name="viewport" />
+    <meta th:name="_csrf" th:value="${_csrf.token}" />
+    <title th:text="${person.name} + ' | Adebar'">Jane Doe | Adebar</title>
+    <link rel="stylesheet" type="text/css" href="../../static/resources/css/bootstrap.min.css"
+      th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
+    <link rel="stylesheet" type="text/css" href="../../static/resources/css/vis.min.css" th:href="@{/resources/css/vis.min.css}" />
 
-  <link rel="stylesheet" type="text/css" href="../../static/resources/css/bootstrap-select.min.css"
-        th:href="@{/resources/css/bootstrap-select.min.css}"/>
+    <link rel="stylesheet" type="text/css" href="../../static/resources/css/style.css" th:href="@{/resources/css/style.css}" />
+    <link rel="stylesheet" type="text/css" href="../../static/resources/css/personDetails.css"
+      th:href="@{/resources/css/personDetails.css}" />
+    <link rel="stylesheet" type="text/css" href="../../static/resources/css/timeline.css" th:href="@{/resources/css/timeline.css}" />
 
-  <link rel="shortcut icon" th:href="@{/resources/res/favicon.ico}"/>
-</head>
-<body>
+    <link rel="stylesheet" type="text/css" href="../../static/resources/css/bootstrap-select.min.css"
+      th:href="@{/resources/css/bootstrap-select.min.css}" />
 
-<!-- central navigation -->
-<nav th:replace="navigation :: topNav(page='persons')"></nav>
+    <link rel="shortcut icon" th:href="@{/resources/res/favicon.ico}" />
+  </head>
 
-<!-- page specific content-->
-<main id="main">
+  <body>
 
-  <header id="page-header">
-    <a href="overview.html" th:href="@{/persons}">
-      <span class="glyphicon glyphicon-chevron-left"></span>
-      Zurück zur Personen-Übersicht
-      <span class="glyphicon glyphicon-info-sign" data-toggle="tooltip" data-placement="bottom"
+    <!-- central navigation -->
+    <nav th:replace="navigation :: topNav(page='persons')"></nav>
+
+    <!-- page specific content-->
+    <main id="main">
+
+      <header id="page-header">
+        <a href="overview.html" th:href="@{/persons}">
+          <span class="glyphicon glyphicon-chevron-left"></span>
+          Zurück zur Personen-Übersicht
+          <span class="glyphicon glyphicon-info-sign" data-toggle="tooltip" data-placement="bottom"
             data-title="Bald kommt man hier zur letzten Seite zurück"></span>
-    </a>
+        </a>
 
-    <h1 th:text="|Profil von ${person.name}|">Profil von Jane Doe</h1>
+        <h1 th:text="|Profil von ${person.name}|">Profil von Jane Doe</h1>
 
-    <!--
+        <!--
       TODO
         instead of defining the data to load in the corresponding tabs, they should be placed in the <section> where they are actually inserted
         then, upon clicking on a tab all the <section>s will be queried and the data will be inserted
      -->
 
-    <div class="clearfix">
-      <div class="pull-right">
-        <span class="glyphicon glyphicon-user details-icon"></span>
+        <div class="clearfix">
+          <div class="pull-right">
+            <span class="glyphicon glyphicon-user details-icon"></span>
+          </div>
+        </div>
+
+        <ul class="nav nav-tabs category-nav" role="tablist" th:fragment="navigation">
+          <li role="presentation" th:classappend="${tab == 'general'} ? 'active'">
+            <a href="#overview" class="tab-controller" th:href="@{/persons/{id}(id=${person.id})}">
+              Allgemeine Infos
+            </a>
+          </li>
+          <li role="presentation" th:classappend="${tab == 'activist-referent'} ? 'active'">
+            <a href="#activist-referent" class="tab-controller" th:href="@{/persons/{id}/activist-referent(id=${person.id})}">
+              Aktiven + Referenteninfos
+            </a>
+          </li>
+          <li role="presentation" th:classappend="${tab == 'events'} ? 'active'">
+            <a href="#events" class="tab-controller" th:href="@{/persons/{id}/events(id=${person.id})}">
+              Veranstaltungsteilnahmen
+            </a>
+          </li>
+          <li role="presentation" th:classappend="${tab == 'newsletters'} ? 'active'">
+            <a href="#newsletters" class="tab-controller" th:href="@{/persons/{id}/newsletters(id=${person.id})}">
+              Newsletter
+            </a>
+          </li>
+        </ul>
+      </header>
+
+      <div class="modal modal-error fade" id="participation-failed-dialog" tabindex="-1" role="dialog" th:if="${participationFailed}">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h2 class="modal-title h3">Konnte nicht an allen Veranstaltungen teilnehmen</h2>
+            </div>
+            <div class="modal-body">
+              <p>
+                Die Person konnte zu den folgenden Veranstaltungen nicht hinzugefügt werden. Bitte
+                versuche es auf der Seite der Veranstaltung erneut.
+              </p>
+              <div class="list-group">
+                <div class="list-group-item" th:each="event : ${failedParticipations.keySet()}"
+                  th:inline="text">
+                  [[${event.name}]]
+                  <small th:text="|(${#time.formatTimeSpan(event.startTime, event.endTime)})|">
+                    (09.-13.05.18)
+                  </small>
+                  <div class="pull-right">
+                    <span class="glyphicon glyphicon-baby-formula" data-toggle="tooltip"
+                      data-placement="bottom" data-title="Zu jung" th:if="${failedParticipations.get(event).name() == 'TOO_YOUNG'}"></span>
+                    <span class="glyphicon glyphicon-bed" data-toggle="tooltip" data-placement="bottom"
+                      data-title="Ausgebucht" th:if="${failedParticipations.get(event).name() == 'BOOKED_OUT'}"></span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">
+                Ok
+              </button>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
 
-    <ul class="nav nav-tabs category-nav" role="tablist" th:fragment="navigation">
-      <li role="presentation"
+      <article class="tab-content">
+
+        <!-- general and family relationship -->
+        <div id="overview" class="tab-pane container-fluid" th:if="${tab == 'general'}"
           th:classappend="${tab == 'general'} ? 'active'">
-        <a href="#overview" class="tab-controller" th:href="@{/persons/{id}(id=${person.id})}">
-          Allgemeine Infos
-        </a>
-      </li>
-      <li role="presentation"
+
+          <section id="general" class="display-category" th:replace="persons/personDetailsOverview :: general">
+
+          </section>
+
+          <section class="display-category" id="family-relations" th:replace="persons/familyRelations :: graph">
+            <div class="row">
+              <h2>Verwandschaft</h2>
+            </div>
+            <div class="row">
+              <div class="container bordered round height-md" id="relationship-graph"></div>
+            </div>
+          </section>
+
+
+        </div>
+
+        <!-- activist and referent -->
+        <div id="activist-referent" class="tab-pane container-fluid" th:if="${tab == 'activist-referent'}"
           th:classappend="${tab == 'activist-referent'} ? 'active'">
-        <a href="#activist-referent" class="tab-controller"
-           th:href="@{/persons/{id}/activist-referent(id=${person.id})}">
-          Aktiven + Referenteninfos
-        </a>
-      </li>
-      <li role="presentation"
+
+          <!-- activist profile -->
+          <section class="display-category" id="activist" th:replace="persons/activistProfile :: profile">
+          </section>
+
+          <!-- referent profile -->
+          <section class="display-category" id="referent" th:replace="persons/referentProfile :: profile">
+            <div class="row">
+              <h2>Referierenden-Infos</h2>
+            </div>
+          </section>
+        </div>
+
+        <section id="events" class="display-category tab-pane" role="tabpanel" th:if="${tab == 'events'}"
           th:classappend="${tab == 'events'} ? 'active'">
-        <a href="#events" class="tab-controller" th:href="@{/persons/{id}/events(id=${person.id})}">
-          Veranstaltungsteilnahmen
-        </a>
-      </li>
-      <li role="presentation"
+
+          <div th:replace="persons/events :: timeline"></div>
+
+        </section>
+
+        <section id="newsletters" class="display-category tab-pane" role="tabpanel" th:if="${tab == 'newsletters'}"
           th:classappend="${tab == 'newsletters'} ? 'active'">
-        <a href="#newsletters" class="tab-controller"
-           th:href="@{/persons/{id}/newsletters(id=${person.id})}">
-          Newsletter
-        </a>
-      </li>
-    </ul>
-  </header>
 
-  <article class="tab-content">
-
-    <!-- general and family relationship -->
-    <div id="overview" class="tab-pane container-fluid" th:if="${tab == 'general'}"
-         th:classappend="${tab == 'general'} ? 'active'">
-
-      <section id="general" class="display-category"
-               th:replace="persons/personDetailsOverview :: general">
-
-      </section>
-
-      <section class="display-category" id="family-relations"
-               th:replace="persons/familyRelations :: graph">
-        <div class="row">
-          <h2>Verwandschaft</h2>
-        </div>
-        <div class="row">
-          <div class="container bordered round height-md" id="relationship-graph"></div>
-        </div>
-      </section>
+          <div th:replace="persons/subscribedNewsletters :: newsletters"></div>
 
 
-    </div>
+        </section>
 
-    <!-- activist and referent -->
-    <div id="activist-referent" class="tab-pane container-fluid"
-         th:if="${tab == 'activist-referent'}"
-         th:classappend="${tab == 'activist-referent'} ? 'active'">
+      </article>
 
-      <!-- activist profile -->
-      <section class="display-category" id="activist"
-               th:replace="persons/activistProfile :: profile">
-      </section>
+    </main>
 
-      <!-- referent profile -->
-      <section class="display-category" id="referent"
-               th:replace="persons/referentProfile :: profile">
-        <div class="row">
-          <h2>Referierenden-Infos</h2>
-        </div>
-      </section>
-    </div>
+    <form id="logout-user" method="POST" th:action="@{/logout}">
+      <input type="hidden" name="csrf" th:value="csrf" />
+    </form>
 
-    <section id="events" class="display-category tab-pane" role="tabpanel"
-             th:if="${tab == 'events'}" th:classappend="${tab == 'events'} ? 'active'">
+    <script type="text/javascript" src="../../static/resources/js/jquery.min.js" th:src="@{/webjars/jquery/jquery.min.js}"></script>
+    <script type="text/javascript" src="../../static/resources/js/bootstrap.min.js" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+    <script type="text/javascript" src="../../static/resources/js/bootstrap-select.min.js" th:src="@{/resources/js/bootstrap-select.min.js}"></script>
 
-      <div th:replace="persons/events :: timeline"></div>
+    <script type="text/javascript" src="../../static/resources/js/list.min.js" th:src="@{/resources/js/list.min.js}"
+      th:if="${tab == 'events'}"></script>
+    <script type="text/javascript" src="../../static/resources/js/list.fuzzysearch.min.js" th:src="@{/resources/js/list.fuzzysearch.min.js}"
+      th:if="${tab == 'events'}"></script>
 
-    </section>
+    <script src="../../static/resources/js/init.js" th:src="@{/resources/js/init.js}"></script>
+    <script src="../../static/resources/js/formControls.js" th:src="@{/resources/js/formControls.js}"></script>
+    <script src="../../static/resources/js/personDetails.js" th:src="@{/resources/js/personDetails.js}"></script>
 
-    <section id="newsletters" class="display-category tab-pane" role="tabpanel"
-             th:if="${tab == 'newsletters'}"
-             th:classappend="${tab == 'newsletters'} ? 'active'">
+    <script th:if="${participationFailed}">
+      $(document).ready(() => $('#participation-failed-dialog').modal('show'));
+    </script>
 
-      <div th:replace="persons/subscribedNewsletters :: newsletters"></div>
+    <script th:if="${param.form != null and param.form[0] == 'edit-person'}">
+      $(document).ready(() => $('#edit-person-dialog').modal('show'));
+    </script>
 
+    <script th:if="${param.do != null and param.do[0] == 'add-parent'}" th:inline="javascript">
+      $(document).ready(() => {
+        const modal = $('#add-parent-dialog');
+        const tab = [
+          [$ {
+            param.tab != null
+          } ? $ {
+            param.tab[0]
+          } : '']
+        ];
+        modal.modal('show').find(`#${tab}`).tab('show');
+      });
+    </script>
 
-    </section>
+    <script th:if="${param.do != null and param.do[0] == 'add-sibling'}" th:inline="javascript">
+      $(document).ready(() => {
+        const modal = $('#add-sibling-dialog');
+        const tab = [
+          [$ {
+            param.tab != null
+          } ? $ {
+            param.tab[0]
+          } : '']
+        ];
+        modal.modal('show').find(`#${tab}`).tab('show');
+      });
+    </script>
 
-  </article>
+    <script th:if="${param.do != null and param.do[0] == 'add-child'}" th:inline="javascript">
+      $(document).ready(() => {
+        const modal = $('#add-child-dialog');
+        const tab = [
+          [$ {
+            param.tab != null
+          } ? $ {
+            param.tab[0]
+          } : '']
+        ];
+        modal.modal('show').find(`#${tab}`).tab('show');
+      });
+    </script>
 
-</main>
+    <script th:if="${param.form != null and param.form[0] == 'add-qualification'}" th:inline="javascript">
+      $(document).ready(() => {
+        const modal = $('#add-qualification-dialog');
+        const tab = [
+          [$ {
+            param.tab != null
+          } ? $ {
+            param.tab[0]
+          } : '']
+        ];
+        modal.modal('show');
+        modal.find(`#${tab}`).tab('show');
+      });
+    </script>
 
-<form id="logout-user" method="POST" th:action="@{/logout}">
-  <input type="hidden" name="csrf" th:value="csrf"/>
-</form>
+    <script type="text/javascript" th:if="${tab == 'events'}">
+      const fuzzyOptions = {
+        searchClass: "fuzzy-search",
+        location: 0,
+        distance: 150,
+        threshold: 0.4,
+        multiSearch: true
+      };
+      const eventOptions = {
+        listClass: "events",
+        valueNames: ['name', 'time', 'place', 'belonging'],
+        plugins: [ListFuzzySearch(fuzzyOptions)]
+      };
+      new List('add-participations-dialog', eventOptions);
+    </script>
 
-<script type="text/javascript" src="../../static/resources/js/jquery.min.js"
-        th:src="@{/webjars/jquery/jquery.min.js}"></script>
-<script type="text/javascript" src="../../static/resources/js/bootstrap.min.js"
-        th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-<script type="text/javascript" src="../../static/resources/js/bootstrap-select.min.js"
-        th:src="@{/resources/js/bootstrap-select.min.js}"></script>
+  </body>
 
-<script type="text/javascript" src="../../static/resources/js/list.min.js"
-        th:src="@{/resources/js/list.min.js}" th:if="${tab == 'events'}"></script>
-<script type="text/javascript" src="../../static/resources/js/list.fuzzysearch.min.js"
-        th:src="@{/resources/js/list.fuzzysearch.min.js}" th:if="${tab == 'events'}"></script>
-
-<script src="../../static/resources/js/init.js" th:src="@{/resources/js/init.js}"></script>
-<script src="../../static/resources/js/formControls.js"
-        th:src="@{/resources/js/formControls.js}"></script>
-<script src="../../static/resources/js/personDetails.js"
-        th:src="@{/resources/js/personDetails.js}"></script>
-
-<script th:if="${param.form != null and param.form[0] == 'edit-person'}">
-  $(document).ready(() => $('#edit-person-dialog').modal('show'));
-</script>
-
-<script th:if="${param.do != null and param.do[0] == 'add-parent'}" th:inline="javascript">
-  $(document).ready(() => {
-    const modal = $('#add-parent-dialog');
-    const tab = [[${param.tab != null} ? ${param.tab[0]} : '']];
-    modal.modal('show').find(`#${tab}`).tab('show');
-  });
-</script>
-
-<script th:if="${param.do != null and param.do[0] == 'add-sibling'}" th:inline="javascript">
-  $(document).ready(() => {
-    const modal = $('#add-sibling-dialog');
-    const tab = [[${param.tab != null} ? ${param.tab[0]} : '']];
-    modal.modal('show').find(`#${tab}`).tab('show');
-  });
-</script>
-
-<script th:if="${param.do != null and param.do[0] == 'add-child'}" th:inline="javascript">
-  $(document).ready(() => {
-    const modal = $('#add-child-dialog');
-    const tab = [[${param.tab != null} ? ${param.tab[0]} : '']];
-    modal.modal('show').find(`#${tab}`).tab('show');
-  });
-</script>
-
-<script th:if="${param.form != null and param.form[0] == 'add-qualification'}" th:inline="javascript">
-  $(document).ready(() => {
-    const modal = $('#add-qualification-dialog');
-    const tab = [[${param.tab != null} ? ${param.tab[0]} : '']];
-    modal.modal('show');
-    modal.find(`#${tab}`).tab('show');
-  });
-</script>
-
-<script type="text/javascript" th:if="${tab == 'events'}">
-  const fuzzyOptions = {
-    searchClass: "fuzzy-search",
-    location: 0,
-    distance: 150,
-    threshold: 0.4,
-    multiSearch: true
-  };
-  const eventOptions = {
-    listClass: "events",
-    valueNames: ['name', 'time', 'place', 'belonging'],
-    plugins: [ListFuzzySearch(fuzzyOptions)]
-  };
-  new List('add-participations-dialog', eventOptions);
-</script>
-
-</body>
 </html>
