Remove link to detailed participants list

--- a/src/main/resources/templates/events/customizeParticipantsTable.html
+++ b/src/main/resources/templates/events/customizeParticipantsTable.html
@@ -98,7 +98,7 @@
                 <div class="btn-group btn-group-sm" th:if="${templates} and not ${templates.empty}">
                   <button type="button" class="btn btn-default dropdown-toggle"
                           data-toggle="dropdown">
-                    <span class="glyphicon glyphicon-folder-open"></span> Laden
+                    <span class="glyphicon glyphicon-folder-open"></span> Vorlage
                   </button>
                   <ul class="dropdown-menu">
                     <li th:each="template : ${templates}">
